--- a/brand.html
+++ b/brand.html
@@ -47,7 +47,7 @@
         <div class="container-fluid clearfix">
             <div class="subnav">
                 <div>
-                    <a class="navlogo" href=""></a>
+                    <a class="navlogo" href="index.html"></a>
                 </div>
                 <div class="subnav-menu">
                     <ul>
@@ -132,14 +132,38 @@
         </div>
 
 <!-- --------------------------------------------------------------------------- -->
+<!-- ------------------------------BANNER-------------------------------------- -->
+<!-- --------------------------------------------------------------------------- -->
+<div class="container-fluid">
+    <div class="brand-banner">
+        <div class="overlay-dark"></div>
+        <div class="banner-title">
+                <h1>
+                    <span class="monserrbold">the</span> <span class="monserreg">brand</span>
+                </h1>
+                <h4>
+                    <span class="monserreg">Company slogan goes here</span>
+                </h4>
+        </div>
+    </div>            
+</div>
+
+<!-- --------------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
 <!-- ------------------------------CONTENT-------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
 
 <section class="container clearfix">
     <div class="col-md-10  offset-md-1">
-        <div class="brabd-content">
-            asdkjal
+        <div class="brand-content">
+            <div class="content">
+                <div class="brand-image brand1 float-left"></div>
+                <div class="float-left">
+                    <h4 class="monserrbold">Hand designed clothing</h4>
+                    <h5 class="monserreg">Established Lorem ipsum dolor sit amet consectetur</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque debitis ipsam voluptates laborum id necessitatibus quidem odio est in. Officiis, sequi sit? Beatae suscipit error dolorum commodi a, sit soluta!</p> 
+                </div>
+            </div>
         </div>
     </div>
 </section>
