--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container-fluid">
             <div class="subnav">
                 <div>
-                    <a class="navlogo" href=""></a>
+                    <a class="navlogo" href="index.html"></a>
                 </div>
                 <div class="subnav-menu">
                     <ul>
