--- a/lookbook.html
+++ b/lookbook.html
@@ -44,7 +44,7 @@
 <!-- ---------------SECONDARY MENU----------------- -->
 <!-- ---------------------------------------------- -->
 
-        <div class="container-fluid">
+        <div class="container-fluid clearfix">
             <div class="subnav">
                 <div>
                     <a class="navlogo" href="index.html"></a>
@@ -129,110 +129,42 @@
                     </form>
                 </div>
             </div>
-            <section class="section-carrousel">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                        <img class="d-block w-100" src="assets/img/gallery_1.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                
-            </section>
         </div>
-        <hr>
-<!-- ---------------------------------------------- -->
-        <div class="container">
-            <div class="secondary-navbar">
-                <ul>
-                    <li><a href="">POPULAR</a></li>
-                    <li><a href="">ARRIVALS</a></li>
-                    <li><a href="">BEST SELLERS</a></li>
-                    <li><a href="">SPECIAL OFFERS</a></li>
-                    <li><a href="">COMMING SOON</a></li>
-                </ul>
-            </div>
-            <div class="clearfix">
-                <ul class="galeria float-left">
-                    <li class="galeria-item"><span class="item-price monserreg"><sup>$</sup>89.00</span><a href=""><img class="item-image" src="assets/img/item1.jpg" alt=""><i class="icon-info-circle item-info"></i></a>
-                        <div id="item1"><h7 class="monserrbold">alslakssdasdasdasdasdasd</h7>
-                            <span>alslakssdasdasdasdasdasd</span>
-                            <span>
-                                <a href=""><i class="item-icon icon-shopping-cart"></a></i>
-                                <a href=""><i class="item-icon icon-heart-empty"></i></a>
-                                <a href=""><i class="item-icon icon-compress"></i></a>
-                            </span>
-                        </div>
-                    </li>
-                    <li class="galeria-item"><span class="item-price monserreg"><sup>$</sup>47.50</span><a href=""><img class="item-image" src="assets/img/item2.jpg" alt=""><i class="icon-info-circle item-info"></i></a>
-                        <div id="item1"><h7 class="monserrbold">alslakssdasdasdasdasdasd</h7><span>alslakssdasdasdasdasdasd</span><span><a href=""><i class="item-icon icon-shopping-cart"></a></i><a href=""><i class="item-icon icon-heart-empty"></i></a><a href=""><i class="item-icon icon-compress"></i></a></span></div>
-                    </li>
-                    <li class="galeria-item-doble"><span class="item-price monserreg"><sup>$</sup>69.95</span><a href=""><img class="item-image" src="assets/img/item3.jpg" alt=""><i class="icon-info-circle item-info"></i></a>
-                        <div id="item1"><h7 class="monserrbold">alslakssdasdasdasdasdasd</h7><span>alslakssdasdasdasdasdasd</span><span><a href=""><i class="item-icon icon-shopping-cart"></a></i><a href=""><i class="item-icon icon-heart-empty"></i></a><a href=""><i class="item-icon icon-compress"></i></a></span></div>
-                    </li>
-                </ul>
-                <ul class="galeria float-left">
-                    <li class="galeria-item-doble"><span class="item-price monserreg"><sup>$</sup><strike>107</strike> <sup>$</sup>89.90</span><a href=""><img class="item-image" src="assets/img/item4.jpg" alt=""><i class="icon-info-circle item-info"></i></a></li>
-                    <li class="galeria-item"><span class="item-price monserreg"><sup>$</sup>89.00</span><a href=""><img class="item-image" src="assets/img/item5.jpg" alt=""><i class="icon-info-circle item-info"></i></a></li>
-                    <li class="galeria-item"><span class="item-price monserreg"><sup>$</sup>89.00</span><a href=""><img class="item-image" src="assets/img/item6.jpg" alt=""><i class="icon-info-circle item-info"></i></a></li>
-                </ul>
-            </div>
-        </div>
-        <hr>
-        <div class="container-fluid">
-            <div class="lookbook">
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-men">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">men's</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
-                </div>
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-woman">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">women</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
-                </div>
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-you">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">you</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
-                </div>
-
-            </div>
-        </div>            
-    </body>
-<!-- --------------------------------------------------------------------------- -->
-<!-- --------------------------------------------------------------------------- -->
 
 <!-- --------------------------------------------------------------------------- -->
+<!-- ------------------------------BANNER-------------------------------------- -->
+<!-- --------------------------------------------------------------------------- -->
+<div class="container-fluid">
+    <div class="brand-banner">
+        <div class="overlay-dark"></div>
+        <div class="banner-title">
+                <h1>
+                    <span class="monserrbold">Our</span> <span class="monserreg">lookbook</span>
+                </h1>
+                <h4>
+                    <span class="monserreg">Latest posts - mens & womens</span>
+                </h4>
+        </div>
+    </div>            
+</div>
+
+<!-- --------------------------------------------------------------------------- -->
+<!-- --------------------------------------------------------------------------- -->
+<!-- ------------------------------CONTENT-------------------------------------- -->
+<!-- --------------------------------------------------------------------------- -->
+
+<section class="container clearfix">
+    <div class="col-md-10  offset-md-1">
+        <div class="container brand-content">
+                              
+        </div>
+    </div>
+</section>
+
+
+<!-- --------------------------------------------------------------------------- -->
+<!-- --------------------------------------------------------------------------- -->
+<!-- ------------------------------FOOTER-------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
     <footer class="container-fluid clearfix">
         <div class="container" >
