--- a/product-view.html
+++ b/product-view.html
@@ -161,10 +161,10 @@
         <div class="overlay-dark"></div>
         <div class="banner-title">
                 <h1>
-                    <span class="monserrbold">Our</span> <span class="monserreg">lookbook</span>
+                    <span class="monserrbold">Product </span> <span class="monserreg">view</span>
                 </h1>
                 <h4>
-                    <span class="monserreg">Latest posts - mens & womens</span>
+                    <span class="monserreg">mens - casuals - hoodies & sweatshirts - <span>ave classic sweatshirt</span></span>
                 </h4>
         </div>
     </div>            
@@ -172,108 +172,32 @@
 <!-- --------------------------------------------------------------------------- -->
 <!-- ------------------------------CONTENT-------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
-<!-- --------------------------------------------------------------------------- -->
-<!-- ------------------------------GALERY NAVBAR-------------------------------------- -->
-<!-- --------------------------------------------------------------------------- -->
 
-
-        <div class="container">
-            <hr>
-            <div class="secondary-navbar">
-                <ul>
-                    <li><a class="monserrbold" href="">Latest</a></li>
-                    <li><a class="monserrbold" href="">Most liked</a></li>
-                    <li><a class="monserrbold"    href="">BEST SELLERS</a></li>
-                    <li><a class="monserrbold"    href="">Price low to high</a></li>
-                    <li><a class="monserrbold"    href="">Price high to low</a></li>
-                </ul>
-            </div>
-            <div class="wrap-lookbook">
-                <ul class="d-flex flex-wrap justify-content-between">
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item1.jpg" alt="">
-                    </li>
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item2.jpg" alt="">
-                    </li>
-                    <div class="double-item">
-                        <div class="full">
-                            <h3><span class="monserrbold">Jane's </span><span class="monserreg">lookbook</span></h3>
-                            <h4 class="monserrbold subtitle">Get the look for under $200</h4>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci libero id maxime.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <a class="item-lookbook-button" href="">View now</a>
-                        </div>
-                        <img class="img-fluid" src="assets/img/lookbook-3.jpg" alt="">
-                    </div>
-                    <li class="simple-item">
-                            <img class="img-fluid" src="assets/img/item3.jpg" alt="">
-                        </li>
-                    <li class="simple-item">
-                            <img class="img-fluid" src="assets/img/item4.jpg" alt="">
-                        </li>
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item5.jpg" alt="">
-                    </li>
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item6.jpg" alt="">
-                    </li>
-                    <div class="triple-item">
-                        <div class="full">
-                            <h3><span class="monserrbold">Jane's </span><span class="monserreg">lookbook</span></h3>
-                            <h4 class="monserrbold subtitle">Get the look for under $200</h4>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci libero id maxime.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <a class="item-lookbook-button" href="">View now</a>
-                        </div>
-                        <div class="float-right new-look">
-                            <h3 class="monserrbold big-title">win</h3>
-                            <h4 class="monserrbold big-subtitle">a new look</h4>
-                        </div>
-                        <img class="img-fluid" src="assets/img/lookbook-newlook.jpg" alt="">
-                    </div> 
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item6.jpg" alt="">
-                    </li>                     
-                </ul>
-            </div>
-            <hr>
-        </div>
-        <div class="container-fluid">
-            <div class="lookbook">
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-men">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">men's</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
+    <section class="container">
+        <div class="col-md-10  offset-md-1">
+            <div class="row">
+                <div class="col-md-5">
+                    sdsd
                 </div>
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-woman">
+                <div class="col-md-7">
+                    <h3 class="monserrbold title">Ave classic sweatshirt</h3>  
+                    <div>
+                        <span class="product-span border-right"><i class="icon-calendar-o"></i><strong> 3 Review(s)</strong></span>
+                        <span class="product-span border-right"><strong>Add a Review</strong></span>
+                        <span class="product-span">Share:</span>
+                        <span> 
+                            <a href=""> <i class="icon-facebook"></i></a>
+                            <a href=""><i class="icon-twitter"></i></a>
+                            <a href=""><i class="icon-pinterest"></i></a>
+                            <a href=""><i class="icon-instagrem"></i></a>
+                            <a href=""><i class="icon-mail"></i></a>
+                        </span>
                     </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">women</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
+                    <span><h3>107</h3></span>
                 </div>
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-you">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">you</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
-                </div>
-
             </div>
         </div>
+    </section>
 <!-- --------------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
 <!-- ------------------------------FOOTER-------------------------------------- -->
