--- a/sign-in.html
+++ b/sign-in.html
@@ -161,10 +161,10 @@
         <div class="overlay-dark"></div>
         <div class="banner-title">
                 <h1>
-                    <span class="monserrbold">Our</span> <span class="monserreg">lookbook</span>
+                    <span class="monserrbold">Wellcome </span> <span class="monserreg">to ave</span>
                 </h1>
                 <h4>
-                    <span class="monserreg">Latest posts - mens & womens</span>
+                    <span class="monserreg">Sign in or register</span>
                 </h4>
         </div>
     </div>            
@@ -172,108 +172,45 @@
 <!-- --------------------------------------------------------------------------- -->
 <!-- ------------------------------CONTENT-------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
-<!-- --------------------------------------------------------------------------- -->
-<!-- ------------------------------GALERY NAVBAR-------------------------------------- -->
-<!-- --------------------------------------------------------------------------- -->
 
-
-        <div class="container">
-            <hr>
-            <div class="secondary-navbar">
-                <ul>
-                    <li><a class="monserrbold" href="">Latest</a></li>
-                    <li><a class="monserrbold" href="">Most liked</a></li>
-                    <li><a class="monserrbold"    href="">BEST SELLERS</a></li>
-                    <li><a class="monserrbold"    href="">Price low to high</a></li>
-                    <li><a class="monserrbold"    href="">Price high to low</a></li>
-                </ul>
-            </div>
-            <div class="wrap-lookbook">
-                <ul class="d-flex flex-wrap justify-content-between">
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item1.jpg" alt="">
-                    </li>
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item2.jpg" alt="">
-                    </li>
-                    <div class="double-item">
-                        <div class="full">
-                            <h3><span class="monserrbold">Jane's </span><span class="monserreg">lookbook</span></h3>
-                            <h4 class="monserrbold subtitle">Get the look for under $200</h4>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci libero id maxime.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <a class="item-lookbook-button" href="">View now</a>
-                        </div>
-                        <img class="img-fluid" src="assets/img/lookbook-3.jpg" alt="">
-                    </div>
-                    <li class="simple-item">
-                            <img class="img-fluid" src="assets/img/item3.jpg" alt="">
-                        </li>
-                    <li class="simple-item">
-                            <img class="img-fluid" src="assets/img/item4.jpg" alt="">
-                        </li>
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item5.jpg" alt="">
-                    </li>
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item6.jpg" alt="">
-                    </li>
-                    <div class="triple-item">
-                        <div class="full">
-                            <h3><span class="monserrbold">Jane's </span><span class="monserreg">lookbook</span></h3>
-                            <h4 class="monserrbold subtitle">Get the look for under $200</h4>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci libero id maxime.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <a class="item-lookbook-button" href="">View now</a>
-                        </div>
-                        <div class="float-right new-look">
-                            <h3 class="monserrbold big-title">win</h3>
-                            <h4 class="monserrbold big-subtitle">a new look</h4>
-                        </div>
-                        <img class="img-fluid" src="assets/img/lookbook-newlook.jpg" alt="">
-                    </div> 
-                    <li class="simple-item">
-                        <img class="img-fluid" src="assets/img/item6.jpg" alt="">
-                    </li>                     
-                </ul>
-            </div>
-            <hr>
-        </div>
-        <div class="container-fluid">
-            <div class="lookbook">
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-men">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">men's</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
+    <section class="container">
+        <div class="col-md-10  offset-md-1">
+            <div class="row">
+                <div class="col-md-6 border-right">
+                    <div class="register register-left">
+                        <h3 class="monserrbold title">Sign in</h3>
+                        <form action="">
+                            <input type="text" placeholder="Your email..."> 
+                            <input type="text" placeholder="Your password...">
+                            <span class="register-text">
+                                <button class="item-lookbook-button">Sign in</button>
+                                <a href="">forgot the password?</a>
+                            </span>
+                        </form>        
                     </div>
                 </div>
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-woman">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">women</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
+                <div class="col-md-6">
+                    <div class="register register-right">
+                        <h3 class="monserrbold title">Register</h3>
+                        <form action="">
+                            <input type="text" placeholder="Your email..."> 
+                            <input type="text" placeholder="Your password...">
+                            <input type="text" placeholder="Confirm password...">
+                            <label class="control control-checkbox">
+                                Sign up for exclusive updates, discounts, new arraivals, contest and more!
+                                <input type="checkbox"/>
+                                <div class="control_indicator"></div>
+                            </label>
+                            <span class="register-text">
+                                <button class="item-lookbook-button">Create account</button>
+                                <span class="register-right-text">By clicking 'Create Account', you agree to our <a href="">Privacy Policy</a></span>
+                            </span>
+                        </form>                            
                     </div>
                 </div>
-                <div class="item-lookbook">
-                    <div class="item-lookbook-image lookbook-image-you">
-                    </div>
-                    <div class="item-lookbook-text">
-                        <h3 class="monserrbold">you</h3>
-                        <h3 class="monserreg">lookbook</h3> 
-                        <p class="item-lookbook-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem quam veniam est, voluptas odit quisquam a sunt nam error, quos culpa blanditiis consectetur repellendus quasi libero iure eveniet sequi ducimus.</p>   
-                        <a href="" class="item-lookbook-button">view now</a>
-                    </div>
-                </div>
-
             </div>
         </div>
+    </section>
 <!-- --------------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
 <!-- ------------------------------FOOTER-------------------------------------- -->
