--- a/product-view.html
+++ b/product-view.html
@@ -177,7 +177,27 @@
         <div class="col-md-10  offset-md-1">
             <div class="row">
                 <div class="col-md-5">
-                    sdsd
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img class="d-block w-100" src="assets/img/item1.jpg" alt="First slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/img/item1.jpg" alt="Second slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="assets/img/item1.jpg" alt="Third slide">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
                 </div>
                 <div class="col-md-7">
                     <h3 class="monserrbold title">Ave classic sweatshirt</h3>  
@@ -194,9 +214,87 @@
                         </span>
                     </div>
                     <span><h3>107</h3></span>
+                    Availability: In stock
+                    Product Code: #499577
+                    Tags: Classic,Casual, V-neck, Loose
+
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit necessitatibus facere explicabo labore maiores quis, aliquam quia eveniet! Totam quod animi similique saepe voluptates earum, aliquam perferendis laborum modi fuga.
+                    <ul>
+                        <li>Elasticated cuufs</li> 
+                        <li>Casual fit</li>
+                        <li>100% Cotton</li>
+                        <li>Free shipping with 4 days</li>
+                    </ul>
+                    <div>
+                        <span class="product-specifications">
+                            <h3 class="monserrbold subtitle">Colour</h3>
+                            <select name="" id="">
+                                <option value="">Select Colour</option>
+                            </select>                            
+                        </span>
+                        <span class="product-specifications">
+                            <h3 class="monserrbold subtitle">Size</h3>
+                            <select name="" id="">
+                                <option value="">Select Size</option>
+                            </select>                            
+                        </span>
+                        <span class="product-specifications">
+                            <h3 class="monserrbold subtitle">QTY</h3> 
+                            <input type="number" name="quantity" min="1" max="5" value="1">
+                        </span>
+                    </div>
+
+                    <span class="clearfix">
+                        <button class="item-lookbook-button"><i class="icon-shopping-cart"></i> Add to cart</button>
+                        <button class="item-lookbook-button"><i class="icon-heart-empty"></i>Add to lookbook</button>
+                    </span> 
+                    <span><a href=  ""><i class="icon-link"></i>Add to compare</a></span>
+                    
                 </div>
-            </div>
+             </div>
+
+            <ul class="nav nav-pills mb-3 monserrbold bakground-gray" id="pills-tab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="pills-description-tab" data-toggle="pill" href="#pills-description" role="tab" aria-controls="pills-description" aria-selected="true">Desciription</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-video-tab" data-toggle="pill" href="#pills-video" role="tab" aria-controls="pills-video" aria-selected="false">video</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-specs-tab" data-toggle="pill" href="#pills-specs" role="tab" aria-controls="pills-specs" aria-selected="false">Size & specs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="pills-delivery-tab" data-toggle="pill" href="#pills-delivery" role="tab" aria-controls="pills-delivery" aria-selected="false">Delivery & returns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="pills-reviews-tab" data-toggle="pill" href="#pills-reviews" role="tab" aria-controls="pills-reviews" aria-selected="false">Reviews</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade show active" id="pills-description" role="tabpanel" aria-labelledby="pills-description-tab">
+                        <h3 class="monserrbold subtitle">Description</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi similique, et maiores ipsum sapiente quis sequi ullam animi facere! Explicabo mollitia, hic labore quisquam sit voluptatum maxime quos non ea?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi similique, et maiores ipsum sapiente quis sequi ullam animi facere! Explicabo mollitia, hic labore quisquam sit voluptatum maxime quos non ea?</p>
+                    </div>
+                    <div class="tab-pane fade" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
+                        <h3 class="monserrbold subtitle">Video</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi similique, et maiores ipsum sapiente quis sequi ullam animi facere! Explicabo mollitia, hic labore quisquam sit voluptatum maxime quos non ea?</p>
+                    </div>
+                    <div class="tab-pane fade" id="pills-specs" role="tabpanel" aria-labelledby="pills-specs-tab">
+                        <h3 class="monserrbold subtitle">Size & specs</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi similique, et maiores ipsum sapiente quis sequi ullam animi facere! Explicabo mollitia, hic labore quisquam sit voluptatum maxime quos non ea?</p>
+                    </div>
+                    <div class="tab-pane fade" id="pills-delivery" role="tabpanel" aria-labelledby="pills-delivery-tab">
+                        <h3 class="monserrbold subtitle">Size & specs</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi similique, et maiores ipsum sapiente quis sequi ullam animi facere! Explicabo mollitia, hic labore quisquam sit voluptatum maxime quos non ea?</p>
+                    </div>
+                    <div class="tab-pane fade" id="pills-reviews" role="tabpanel" aria-labelledby="pills-reviews-tab">
+                        <h3 class="monserrbold subtitle">Size & specs</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi similique, et maiores ipsum sapiente quis sequi ullam animi facere! Explicabo mollitia, hic labore quisquam sit voluptatum maxime quos non ea?</p>
+                    </div>
+                </div>
         </div>
+        
     </section>
 <!-- --------------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
